# GameTemplate

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/System/Debug/: SceneInfoDebugger.cpp  SceneInfoDebugger.h
src/System/Debug/Log/: Logger.cpp
src/System/FPS/: FPSCounter.cpp  FPSCounter.h  FPSLimiter.cpp  FPSLimiter.h  FrameRateUtility.cpp  FrameRateUtility.h
src/System/Graphics/: Graphics.cpp  Graphics.h  GraphicsManager.cpp  GraphicsManager.h  ResourceManager.cpp  ResourceManager.h  SceneGraphicsManager.cpp  SceneGraphicsManager.h  TextureLoader.cpp  TextureLoader.h
src/System/Input/: InputManager.cpp  InputManager.h  InputStateBase.cpp  InputStateBase.h  MouseButtonState.cpp  MouseButtonState.h  MouseInputManager.cpp  MouseInputManager.h  MouseInputState.cpp  MouseInputState.h
src/System/Log/: Logger.cpp  Logger.h
src/System/Math/: Rect.cpp  Rect.h
src/System/Scene/: DebugScene.cpp  DebugScene.h  FadeScene.cpp  FadeScene.h  PauseScene.cpp  PauseScene.h  SceneBase.h  SceneManager.cpp  SceneManager.h
src/System/Sound/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h
src/System/Text/: FontManager.cpp  FontManager.h  MultiTextRenderer.cpp  MultiTextRenderer.h  TextData.h  TextRenderer.cpp  TextRenderer.h
src/System/Thread/: SafeThread.cpp  SafeThread.h
src/Utility/: ColorUtility.cpp  ColorUtility.h  PercentageUtility.cpp  PercentageUtility.h
src/Utility/FPS/: FPSCounter.cpp  FPSCounter.h  FPSLimiter.cpp  FPSLimiter.h  FrameRateUtility.cpp  FrameRateUtility.h
